force-app/main/default/objects/Slack_Channel__c/Slack_Channel__c.object-meta.xml
<CustomObject>
    <description>A slack channel where you can post messages to using flows or apex.</description>
    <label>Slack Channel</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Slack Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>