force-app/main/default/objects/Slack_Channel__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>The endpoint URL for incoming webhook messages for this channel</description>
    <externalId>true</externalId>
    <inlineHelpText>The endpoint URL for incoming webhook messages for this channel</inlineHelpText>
    <label>Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>